--- a/index.html
+++ b/index.html
@@ -1,19 +1,60 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="assets/css/styles.css">
     <title>Document</title>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://kit.fontawesome.com/a2cd7665da.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    
-    <header></header>
-    <main></main>
-    <section></section>
-    <section></section>
-    <footer></footer>
-    
+
+    <div class="wrappe row">
+        <aside class="sidebar col-6 col-xl-4">
+            <header class="header row">
+                <div class="user-info col-8">
+                    <img class="thumbnail thumbnail-tiny img-fluid" src="assets/img/abogato.jpg" alt="fotografia usuario">
+                    <div class="user-info__summary">
+                        <h2>Nombre</h2>
+                        <p>Usuario Activo</p>
+                    </div>
+                </div>
+                <nav class="navbar navbar-expand-xs navbar-light navbar-light-row">
+                    <div class="navbar-icon col-4">
+                        <i class="far fa-comment-alt"></i>
+                    </div>
+                    <div class="col-8">
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNav">
+                            <div class="navbar-nav">
+                                <a class="nav-link" href="#">Pricing</a>
+                            </div>
+                        </div>
+                    </div>
+                </nav>
+            </header>
+        </aside>
+
+        <main class="main col-6 col-lx-8 d-none d-sm-block">
+
+        </main>
+
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
